objects/AdditionalTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account where the Additional Team Member belongs to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Team Members</relationshipLabel>
        <relationshipName>Additional_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Team Member</label>
    <nameField>
        <displayFormat>ATM-{000000000}</displayFormat>
        <label>Additional Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NotAllowedPMorAE</fullName>
        <active>true</active>
        <description>Not allow to add a Product Manager on Customer or Prospect</description>
        <errorConditionFormula>AND( OR(Account__r.RecordType.DeveloperName = &quot;Customer_Sold_To&quot; , Account__r.RecordType.DeveloperName = &quot;Customer_Prospect&quot;),   ISPICKVAL (Role__c, &quot;Product Manager&quot;), $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>You not able to add a Product Manager on a Sold To or Prospect Account</errorMessage>
    </validationRules>
</CustomObject>